--- a/index.html
+++ b/index.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <img src="./logoUp.png" alt="serlokas">
+            <nav>
+                NAV
+            </nav>
+            <div class="soc">
+                SOC
+            </div>
+        </header>
+        <main class="hero">
+            HERO
+        </main>
+        <div class="testimonials">
+                TESTIMONIALS
+            <p class="left">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas vitae incidunt eius voluptatibus repellendus quasi itaque in assumenda esse eum.
+            </p>
+            <p class="right">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti reprehenderit eum in incidunt accusantium magnam laudantium labore ducimus vel?
+            </p>
+        </div>
+        <div class="ads">
+            ADS
+        </div>
+        <div class="services">
+            <p class="left-column">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, qui!
+            </p>
+            <p class="center-column">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, similique.
+            </p>
+            <p class="right-column">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, neque.
+            </p>
+        </div>
+        <div class="freelance">
+            FREELANCE
+        </div>
+        <footer>
+            FOOTER
+        </footer>
+    </div>
 </body>
 </html>
