--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             HERO
         </main>
         <div class="testimonials">
+            <p class="top">
                 TESTIMONIALS
+            </p>    
             <p class="left">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas vitae incidunt eius voluptatibus repellendus quasi itaque in assumenda esse eum.
             </p>
@@ -34,6 +36,9 @@
             ADS
         </div>
         <div class="services">
+            <p class="top">
+                SERVICES
+            </p>
             <p class="left-column">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, qui!
             </p>
