--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
         <header>
-            <img src="./logoUp.png" alt="serlokas">
+            <p class="hidden-h"> HEADER</p>
+            <img src="./logoUp.png" alt="logo">
             <nav>
                 NAV
             </nav>
@@ -55,6 +56,11 @@
         <footer>
             FOOTER
         </footer>
+        <nav class="bottom">
+            NAV
+        </nav>
+
+    
     </div>
 </body>
 </html>
